# chester

./: .clang-format  .clang-tidy  CMakeLists.txt  Cargo.toml  Makefile  lint.sh
engine/: bitboard.cpp  bitset.cpp  board.cpp  castling.cpp  castling_type.cpp  engine.cpp  fen.cpp  file.cpp  move.cpp  move_list.cpp  move_type.cpp  piece.cpp  piece_type.cpp  position.cpp  rank.cpp  side.cpp  square.cpp
engine/lookup/: in_between.cpp  king.cpp  knight.cpp  leaping.cpp  sliding.cpp
engine/lookup/moves/: leaping.cpp  sliding.cpp
frontend/: frontend.cpp
include/chester/: bitset.hpp  board.hpp  castling.hpp  castling_type.hpp  fen.hpp  file.hpp  lookup.hpp  move.hpp  move_list.hpp  move_type.hpp  panic.hpp  piece.hpp  piece_type.hpp  position.hpp  rank.hpp  side.hpp  square.hpp
include/chester/engine/: bitboard.hpp  bitset.hpp  board.hpp  castling.hpp  castling_type.hpp  fen.hpp  file.hpp  lookup.hpp  move.hpp  move_list.hpp  move_type.hpp  piece.hpp  piece_type.hpp  position.hpp  rank.hpp  side.hpp  square.hpp
include/chester/panic/: panic.hpp
src/: bitboard.rs  file.rs  lookup.rs  main.rs  position.rs  rank.rs  square.rs
tests/engine/: bitboard.cpp  bitset.cpp  board.cpp  castling.cpp  fen.cpp  file.cpp  move.cpp  move_list.cpp  piece.cpp  position.cpp  rank.cpp  square.cpp
tests/engine/lookup/: bishop.cpp  in_between.cpp  king.cpp  knight.cpp  rook.cpp
tests/engine/lookup/moves/: bishop.cpp  king.cpp  knight.cpp  rook.cpp
